<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>ros_middleware_bridge</name>
  <version>1.2.0</version>
  <description>ROS 2 middleware bridge serializing topic data between different RMW implementations .</description>

  <maintainer email="christian.geller@ika.rwth-aachen.de">christian.geller@ika.rwth-aachen.de</maintainer>
  <author email="christian.geller@ika.rwth-aachen.de">christian.geller@ika.rwth-aachen.de</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
