<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>ros_middleware_bridge</name>
  <version>1.2.0</version>
  <description>ROS 2 middleware bridge serializing topic data between different RMW implementations</description>

  <maintainer email="christian.geller@ika.rwth-aachen.de">christian.geller@ika.rwth-aachen.de</maintainer>
  <author email="christian.geller@ika.rwth-aachen.de">christian.geller@ika.rwth-aachen.de</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
